--- a/build.gradle
+++ b/build.gradle
@@ -127,7 +127,7 @@ dependencies {
 	compile "micdoodle8.mods:Galacticraft:${config.galacticraft.version}:API"
 	compile "com.mod-buildcraft:buildcraft:${config.buildcraft.version}:dev"
 	//Ivy
-	compile name: 'CoFHCore', version: config.cofhcore.version, ext: 'jar'
+	//compile name: 'CoFHCore', version: config.cofhcore.version, ext: 'jar'
 }
 
 task getGregTech(type: Download) {
