--- a/build.properties
+++ b/build.properties
@@ -8,7 +8,8 @@ codechickencore.version=1.0.7.47
 nei.version=1.0.5.120
 gregtech.jenkinsbuild=648
 gregtech.version=5.09.33.52
-cofhcore.version=[1.7.10]3.1.4-329-dev
+#cofhcore.version=[1.7.10]3.1.4-329-dev
+cofh_core_version=2388751
 yamcore.version=0.5.79
 baubles.version=1.0.1.10
 thaumcraft.version=4.2.3.5
