--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,12 @@
 modId = GoodGenerator
 modGroup = GoodGenerator
-modVersion = 0.0.1
+modVersion = 0.0.2
 
 minecraftVersion=1.7.10
 forgeVersion=10.13.4.1614
 
 yamcoreVersion=0.5.78
+
+# Make sure GregTech build won't time out
+systemProp.org.gradle.internal.http.connectionTimeout=120000
+systemProp.org.gradle.internal.http.socketTimeout=120000
