--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
         classpath 'com.github.GTNH2:ForgeGradle:FG_1.2-SNAPSHOT'
     }
 }
+
 apply plugin: 'forge'
 apply plugin: 'idea'
 apply plugin: 'java'
@@ -34,11 +35,10 @@ version = "${config.gt.version}"
 group = "gregtech"
 archivesBaseName = "gregtech"
 
-allprojects {
-    apply plugin: 'java'
+compileJava {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
-    compileJava.options.encoding("UTF-8")
+    options.encoding = "UTF-8"
 }
 
 minecraft {
@@ -69,7 +69,6 @@ repositories {
         name = 'DVS1 Maven FS'
         url = 'http://dvs1.progwml6.com/files/maven'
     }
-
     maven { // AppleCore
         url = "http://www.ryanliptak.com/maven/"
     }
@@ -81,14 +80,15 @@ repositories {
         name = 'gtnh_download_source_stupid_underscore_typo'
         artifactPattern("http://downloads.gtnewhorizons.com/Mods_for_Jenkins/[module]_[revision].[ext]")
     }
-
     ivy {
         name = 'gtnh_download_source'
         artifactPattern("http://downloads.gtnewhorizons.com/Mods_for_Jenkins/[module]-[revision].[ext]")
     }
 }
+
 dependencies {
     //Hard dep to start (Without this, it wont compile nor start)
+    compile 'com.google.code.findbugs:jsr305:1.3.9'
     compile "net.industrial-craft:industrialcraft-2:${config.ic2.version}:dev"
 
     //Hard dep to compile (Without this, it wont compile, not even as library)
@@ -103,6 +103,7 @@ dependencies {
     }
 
     //Soft Depths (Without this, it wont compile, not needed as library)
+    compileOnly 'commons-io:commons-io:2.4'
     compileOnly "eu.usrv:YAMCore:${config.minecraft.version}-${config.yamcore.version}:deobf"
     compileOnly "tconstruct:TConstruct:${config.minecraft.version}-${config.tconstruct.version}:deobf"
     compileOnly "codechicken:Translocator:${config.minecraft.version}-${config.translocators.version}:dev"
@@ -116,26 +117,25 @@ dependencies {
     compileOnly name: 'IC2NuclearControl', version: config.nc.version, ext: 'jar'
 }
 
-processResources
-        {
-            // this will ensure that this task is redone when the versions change.
-            inputs.property "version", project.version
-            inputs.property "mcversion", project.minecraft.version
+processResources {
+    // this will ensure that this task is redone when the versions change.
+    inputs.property "version", project.version
+    inputs.property "mcversion", project.minecraft.version
 
-            // replace stuff in mcmod.info, nothing else
-            from(sourceSets.main.resources.srcDirs) {
-                include 'mcmod.info'
+    // replace stuff in mcmod.info, nothing else
+    from(sourceSets.main.resources.srcDirs) {
+        include 'mcmod.info'
 
-                // replace version and mcversion
-                expand 'version': project.version, 'mcversion': project.minecraft.version
-            }
+        // replace version and mcversion
+        expand 'version': project.version, 'mcversion': project.minecraft.version
+    }
 
-            // copy everything else, that's not the mcmod.info
-            from(sourceSets.main.resources.srcDirs) {
-                exclude 'mcmod.info'
-            }
-            exclude '**/Thumbs.db'
-        }
+    // copy everything else, that's not the mcmod.info
+    from(sourceSets.main.resources.srcDirs) {
+        exclude 'mcmod.info'
+    }
+    exclude '**/Thumbs.db'
+}
 
 task sourceJar(type: Jar) {
     from sourceSets.main.allSource
