--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 modId = GoodGenerator
 modGroup = GoodGenerator
-modVersion = 0.0.2
+modVersion = 0.0.2-QF1
 
 minecraftVersion=1.7.10
 forgeVersion=10.13.4.1614
