--- a/build.gradle
+++ b/build.gradle
@@ -106,6 +106,10 @@ repositories {
 		name = "ic2"
 		url = "http://maven.ic2.player.to/"
 	}
+    ivy {
+        name = 'gtnh_download_source'
+        artifactPattern("http://downloads.gtnewhorizons.com/Mods_for_Jenkins/[organisation]/[module]/[revision]/[module]-[revision].[ext]")
+    }
 }
 
 sourceSets {
@@ -136,8 +140,9 @@ processResources
 	exclude '**/Thumbs.db'
 }
 
-dependencies {	
-    
+dependencies {
+    compile "appeng:appliedenergistics2:${config.ae2.version}:dev"
+
     // Used for productive reflection without class loading. (0.9.12 has no reliance on Guava either)
 	//shade group: 'org.reflections', name: 'reflections', version: '0.9.12'
 	//shade group: 'org.dom4j', name: 'dom4j', version: '2.1.1'
@@ -146,12 +151,13 @@ dependencies {
     
     //compile files('libs/gregtech-5.08.33-dev.jar')
     //compile files('libs/gregtech-5.09.31-dev.jar')
-    compile files('libs/gregtech-5.09.33-dev.jar')
+    //compile files('libs/gregtech-5.09.33-dev.jar')
+    compile files('libs/regtech-5.09.34.17-dev.jar')
 
     provided "net.industrial-craft:industrialcraft-2:${config.ic2.version}:dev"  
     //compile "ic2:IC2Classic:1.2.1.8:dev" - Does not mirror internal class structure or visibility of IC2, won't ever compile.
-    
-	compile "mcp.mobius.waila:Waila:1.5.11-RC2-NONEI_1.7.10:dev"
+
+    compile "mcp.mobius.waila:Waila:1.5.11-RC2-NONEI_1.7.10:dev"
 	compile "codechicken:CodeChickenLib:1.7.10-1.1.3.140:dev"
 	compile "codechicken:CodeChickenCore:1.7.10-1.0.7.47:dev"
 	compile "codechicken:NotEnoughItems:1.7.10-1.0.5.120:dev"
