fix(gradle): various gradle and gitignore fixes
make gradlew wrapper executable
update the grgit gradle pluggin
correctly ignore IDEA project files in .gitignore

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,9 @@ buildscript {
 }
 
 plugins {
-    id("org.ajoberstar.grgit") version("3.1.1")
+  // project.grgit is not available and the repository we're working in is not 
+  // interacted with: 
+  id 'org.ajoberstar.grgit' version '4.0.2' apply false
 }
 
 apply plugin: 'forge'
