finsh FRF and change texture code

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ buildscript {
 plugins {
   // project.grgit is not available and the repository we're working in is not 
   // interacted with: 
-  id 'org.ajoberstar.grgit' version '4.0.2' apply false
+  //id 'org.ajoberstar.grgit' version '4.0.2' apply false
 }
 
 apply plugin: 'forge'
