--- a/real.gradle.properties
+++ b/real.gradle.properties
@@ -1,3 +1,5 @@
+systemProp.org.gradle.internal.http.connectionTimeout=120000
+systemProp.org.gradle.internal.http.socketTimeout=120000
 projectVersion=4.10.6
 ic2Version=2.2.828-experimental
 gt5uVersion=experimental-SNAPSHOT
