--- a/build.gradle
+++ b/build.gradle
@@ -2,25 +2,28 @@ buildscript {
     repositories {
         mavenCentral()
         maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
+            name = "gt"
+            url = "https://gregtech.overminddl1.com/"
         }
         maven {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
+        maven {
+            name = "jitpack.io"
+            url = "https://jitpack.io"
+        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
-        classpath "de.undercouch:gradle-download-task:3.1.2"
+        classpath 'com.github.GTNH2:ForgeGradle:FG_1.2-SNAPSHOT'
+		classpath "de.undercouch:gradle-download-task:3.1.2"
     }
 }
-
 apply plugin: 'forge'
 apply plugin: 'signing'
 import de.undercouch.gradle.tasks.download.Download
 
-version = "1.7.10-1.0.8"
+version = "1.7.10-1.0.8-test"
 group= "pers.gwyog.gtneioreplugin"
 archivesBaseName = "gtneioreplugin"
 
