--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'forge'
 apply plugin: 'signing'
 import de.undercouch.gradle.tasks.download.Download
 
-version = "1.7.10-1.0.8-test"
+version = "1.7.10-1.0.9"
 group= "pers.gwyog.gtneioreplugin"
 archivesBaseName = "gtneioreplugin"
 
