--- a/build.gradle
+++ b/build.gradle
@@ -149,15 +149,12 @@ dependencies {
 	//shade group: 'org.dom4j', name: 'dom4j', version: '2.1.1'
 	//compile group: 'org.javassist', name: 'javassist', version: '3.26.0-GA'
     
-    
-    //compile files('libs/gregtech-5.08.33-dev.jar')
-    //compile files('libs/gregtech-5.09.31-dev.jar')
-    //compile files('libs/gregtech-5.09.33-dev.jar')
-    //compile files('libs/gregtech-5.09.34.17-dev.jar')
+
 //    compile("com.github.GTNewHorizons:GT5-Unofficial:experimental-SNAPSHOT:dev") {
 //        setChanging(true)
 //    }
-    compile files('libs/gregtech-5.09.37.00-dev.jar')
+    compile files('libs/gregtech-5.09.37.05-dev.jar')
+    compile ("com.github.GTNewHorizons:StructureLib:${config.structurelib.version}:deobf")
 
     provided "net.industrial-craft:industrialcraft-2:${config.ic2.version}:dev"  
     //compile "ic2:IC2Classic:1.2.1.8:dev" - Does not mirror internal class structure or visibility of IC2, won't ever compile.
