--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 #Dummy File, replaced in Jenkins
+systemProp.org.gradle.internal.http.connectionTimeout=120000
+systemProp.org.gradle.internal.http.socketTimeout=120000
 keyStoreAlias=w
 keyStore=w
 keyStorePass=w
