--- a/build.gradle
+++ b/build.gradle
@@ -176,7 +176,11 @@ dependencies {
 	
 	compile "cofh:CoFHCore:1.7.10R3.0.4:dev"
 	compile "cofh:CoFHLib:1.7.10R3.0.3:dev"
-	compileOnly "net.sengir.forestry:forestry_1.7.10:4.4.0.0:dev"
+
+    // Forestry .jar from repository is obfuscated and won't compile, so use local unobfuscated one.
+	//compileOnly "net.sengir.forestry:forestry_1.7.10:4.4.0.0:dev"
+    compileOnly files('libs/forestry_1.7.10-4.4.0.0-dev.jar')
+
 	compileOnly "mods.railcraft:Railcraft_1.7.10:9.12.3.0:dev"
     compileOnly files('libs/StevesCarts2.0.0.b18-deobf.jar')
     
