--- a/build.gradle
+++ b/build.gradle
@@ -155,10 +155,7 @@ dependencies {
 	//compile group: 'org.javassist', name: 'javassist', version: '3.26.0-GA'
 	
 
-//	compile("com.github.GTNewHorizons:GT5-Unofficial:experimental-SNAPSHOT:dev") {
-//		setChanging(true)
-//	}
-	implementation 'com.github.GTNewHorizons:GT5-Unofficial:experimental-SNAPSHOT'
+	implementation 'com.github.GTNewHorizons:GT5-Unofficial:master-SNAPSHOT'
 	compile ("com.github.GTNewHorizons:StructureLib:${config.structurelib.version}:deobf")
 
 	provided "net.industrial-craft:industrialcraft-2:${config.ic2.version}:dev"  
