Migrate to unified build script

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,28 @@
-/bin/
-eclipse/
-.gradle/
+.gradle
+.settings
+/.idea/
+/run/
+/build/
+/eclipse/
 .classpath
-.settings/
-gradlew.bat - Verknüpfung.lnk
-gradle/
 .project
-out/
-build.bat
-*.txt
+/bin/
+/config/
+/crash-reports/
+/logs/
+options.txt
+/saves/
+usernamecache.json
+banned-ips.json
+banned-players.json
+eula.txt
+ops.json
+server.properties
+servers.dat
+usercache.json
+whitelist.json
+/out/
 *.iml
 *.ipr
 *.iws
-*.bat
+src/main/resources/mixins.*.json
