--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
     }
     dependencies {
         //Defaults to Java 8 & UTF-8 encoding
-        classpath "com.github.GTNH2:ForgeGradle:FG_1.2-SNAPSHOT"
+        classpath "com.github.GTNewHorizons:ForgeGradle:1.2.4"
     }
 }
 
@@ -74,10 +74,6 @@ repositories {
         name = "ic2"
         url = "http://downloads.gtnewhorizons.com/Mods_for_Jenkins/"
     }
-    maven {
-        name = "appleCore"
-        url = "http://www.ryanliptak.com/maven/"
-    }
     ivy {
         name = "gtnh_download_source"
         artifactPattern("http://downloads.gtnewhorizons.com/Mods_for_Jenkins/[module]-[revision].[ext]")
@@ -90,12 +86,28 @@ repositories {
         name = "gt"
         url = "https://gregtech.overminddl1.com/"
     }
+    maven {
+        name = "cofhCore"
+        url = "https://cursemaven.com"
+    }
+    maven {
+        name = "sponge"
+        url = "https://repo.spongepowered.org/repository/maven-public"
+    }
+    maven {
+        name = "ic2"
+        url = "http://maven.ic2.player.to/"
+    }
+    maven {
+        url = "http://www.ryanliptak.com/maven/"
+    }
 }
 
 dependencies {
     compile("com.enderio.core:EnderCore:1.7.10-0.1.0.25_beta:dev")
     compile("appeng:appliedenergistics2:rv3-beta-22:dev")
-    compile("com.github.GTNewHorizons:GT5-Unofficial:experimental-SNAPSHOT:dev") {
+    compile("applecore:AppleCore:1.7.10-1.3.2:deobf")
+    compile("com.github.GTNewHorizons:GT5-Unofficial:master-SNAPSHOT:dev") {
         setChanging(true)
     }
 /*    compileOnly("com.github.GTNewHorizons:Avaritia:master-SNAPSHOT") {
