target concrete branches on push in scala test

--- a/.github/workflows/test-scala-presence.yml
+++ b/.github/workflows/test-scala-presence.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [ master, main ]
   push:
-    branches: [ "**" ]
+    branches: [ master, main ]
 
 jobs:
   test-scala-presence:
