--- a/build.gradle
+++ b/build.gradle
@@ -107,14 +107,13 @@ dependencies {
     compile("com.enderio.core:EnderCore:1.7.10-0.1.0.25_beta:dev")
     compile("appeng:appliedenergistics2:rv3-beta-22:dev")
     compile("applecore:AppleCore:1.7.10-1.3.2:deobf")
-    compile("com.github.GTNewHorizons:GT5-Unofficial:master-SNAPSHOT:dev") {
-        setChanging(true)
-    }
+    compile("com.github.GTNewHorizons:GT5-Unofficial:master-SNAPSHOT:dev")
 /*    compileOnly("com.github.GTNewHorizons:Avaritia:master-SNAPSHOT") {
         setChanging(true)
     }*/
     compile files('GT-PlusPlus-1.7.09.GTNH.jar')
-    compile files('libs/TecTech-1.7.10-4.10.7-b1bcea5f-dev.jar')
+    compile files('TecTech-1.7.10-4.10.7-b1bcea5f-dev.jar')
+    //compile files('bartworks-1.7.10-0.5.27-dev.jar')
     compile("com.github.GTNewHorizons:bartworks:master-SNAPSHOT:dev")
     compileOnly("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev")
     runtime("eu.usrv:YAMCore:${minecraftVersion}-${yamcoreVersion}:deobf");
