--- a/addon.gradle
+++ b/addon.gradle
@@ -5,7 +5,7 @@ sourceSets.main {
 task initAVRcore(type: Exec) {
     description = "Updates (and inits) git submodules"
     group = "Build Setup"
-    commandLine("cmd", "git", "--git-dir=\"" + projectDir.toString() + "/.git\"", "submodule", "update", "--init", "--recursive", "--remote")
+    commandLine 'git', '--git-dir="' + projectDir.toString() + '\\.git"', 'submodule', 'update', '--init', '--recursive', '--remote'
 }
 
 tasks.setupCIWorkspace.dependsOn initAVRcore
