--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-modName = GregTech5-Unofficial
+modName = GregTech
 
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
 modId = gregtech
