--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,14 @@ modName = GT Scanner Mod
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
 modId = detravscannermod
 
-modGroup = com.detrav.detravscannermod
+modGroup = com.detrav
 
 # WHY is there no version field?
 # The build script relies on git to provide a version via tags. It is super easy and will enable you to always know the
 # code base or your binary. Check out this tutorial: https://blog.mattclemente.com/2017/10/13/versioning-with-git-tags/
+
+# Will update your build.gradle automatically whenever an update is available
+autoUpdateBuildScript = false
 
 minecraftVersion = 1.7.10
 forgeVersion = 10.13.4.1614
@@ -24,7 +27,7 @@ developmentEnvironmentUserName = "Developer"
 # version in @Mod([...], version = VERSION, [...])
 # Leave these properties empty to skip individual token replacements
 replaceGradleTokenInFile = DetravScannerMod.java
-gradleTokenModId = GRADLETOKEN_MODID
+gradleTokenModId =
 gradleTokenModName =
 gradleTokenVersion = GRADLETOKEN_VERSION
 gradleTokenGroupName =
@@ -55,3 +58,7 @@ containsMixinsAndOrCoreModOnly = false
 # If enabled, you may use 'shadowImplementation' for dependencies. They will be integrated in your jar. It is your
 # responsibility check the licence and request permission for distribution, if required.
 usesShadowedDependencies = false
+
+# Optional parameter to customize the produced artifacts. Use this to preserver artifact naming when migrating older
+# projects. New projects should not use this parameter.
+customArchiveBaseName = GT Scanner Mod
