--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,28 +1,33 @@
 // Add your dependencies here
 
 dependencies {
-    compile("com.github.GTNewHorizons:GT5-Unofficial:experimental-SNAPSHOT:dev") {
-        transitive = false
-        setChanging(true)
-    }
+    compile("com.github.GTNewHorizons:bartworks:master-SNAPSHOT:dev")
+    compile("com.github.GTNewHorizons:GTplusplus:master-SNAPSHOT:dev")
+    compile("com.github.GTNewHorizons:GT5-Unofficial:master-SNAPSHOT:dev")
 
-    // GT5U Dependencies
-    compile("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev")
-    compile("com.github.GTNewHorizons:StructureLib:master-SNAPSHOT:deobf")
-    compile("codechicken:CodeChickenLib:1.7.10-1.1.3.140:dev")
-    compile("codechicken:CodeChickenCore:1.7.10-1.0.7.47:dev")
-    compile("codechicken:NotEnoughItems:1.7.10-1.0.5.120:dev")
+    compile files("dependencies/GTNewHorizonsCoreMod-1.7.10-1.9.00-dev.jar")  // TODO
 
-    compile("mods.railcraft:Railcraft_1.7.10:9.12.2.0:dev")
-    compile("net.sengir.forestry:forestry_1.7.10:4.2.10.58:dev")
-    compile("com.enderio:EnderIO:1.7.10-2.3.0.417_beta:dev") {
+    compileOnly("com.github.GTNewHorizons:VisualProspecting:master-SNAPSHOT:dev") {
         transitive = false
     }
-    compileOnly("com.github.SinTh0r4s:VisualProspecting:1.0.19b") {
+    compileOnly("com.github.GTNewHorizons:ForestryMC:master-SNAPSHOT:dev") {
+        transitive = false
+    }
+    compileOnly("com.github.GTNewHorizons:Railcraft:master-SNAPSHOT:dev") {
+        transitive = false
+    }
+    compileOnly("com.github.GTNewHorizons:EnderIO:master-SNAPSHOT:dev") {
         transitive = false
     }
 
-    runtime("com.azanor.baubles:Baubles:1.7.10-1.0.1.10:deobf")
-    runtime("eu.usrv:YAMCore:1.7.10-0.5.80:deobf")
-    runtime("com.enderio.core:EnderCore:1.7.10-0.1.0.25_beta:dev")
+    compileOnly("com.mod-buildcraft:buildcraft:7.1.23:dev") {
+        transitive = false
+    }
+    compileOnly("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev") {
+        transitive = false
+    }
+
+    runtime("com.github.GTNewHorizons:Baubles:master-SNAPSHOT:dev")  // TODO: remove once GTNH CoreMod is migrated
+    /*runtime("eu.usrv:YAMCore:1.7.10-0.5.80:deobf")
+    runtime("com.enderio.core:EnderCore:1.7.10-0.1.0.25_beta:dev")*/
 }
