Added MultiBlock Rock Breaker. Added base work for GT Chisels.

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -48,4 +48,7 @@ dependencies {
     compileOnly("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev") {
         transitive = false
     }
+    compileOnly("com.github.GTNewHorizons:Chisel:master-SNAPSHOT:dev") {
+        transitive = false
+    }
 }
