--- a/.gitignore
+++ b/.gitignore
@@ -1,72 +1,31 @@
-# Log file
-*.log
-
-# Package Files #
-*.log.gz
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# java related things
-hs_err_pid*
-*.class
-/bin/
-
-# gradle related things
-/build/
-/.gradle
-/.gradle/*
 .gradle
-
-# minecraft related things
-options.txt
-usernamecache.json
-/logs/
-/crash-reports/
-/saves/
+.settings
+/.idea/
+/run/
+/build/
+/eclipse/
+.classpath
+.project
+/bin/
 /config/
-run/
-
-# intellij related things
-.idea/
-
-# other stuff
-out/
-out/*
+/crash-reports/
+/logs/
+options.txt
+/saves/
+usernamecache.json
+banned-ips.json
+banned-players.json
+eula.txt
+ops.json
+server.properties
+servers.dat
+usercache.json
+whitelist.json
+/out/
+*.iml
 *.ipr
 *.iws
-*.iml
-/classes
-/.classpath
-
-### macOS ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+src/main/resources/mixins.*.json
 *.bat
+*.DS_Store
+!gradlew.bat
