--- a/repositories.gradle
+++ b/repositories.gradle
@@ -2,12 +2,19 @@
 
 repositories {
     maven {
+        name = "sponge"
+        url = "https://repo.spongepowered.org/repository/maven-public"
+    }
+    maven {
         name = "ic2"
         url = "https://maven.ic2.player.to/"
         metadataSources {
             mavenPom()
             artifact()
         }
+    }
+    maven {
+        url "https://cursemaven.com"
     }
     maven {
         url = "https://jitpack.io"
