--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,6 +16,7 @@ dependencies {
     }*/
 
     compile("curse.maven:cofh-core-69162:2388751")
+    compile("curse.maven:advsolar-362768:2885953")
 
     compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:master-SNAPSHOT:dev") {
         transitive = false
